--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.29.1",
     "eslint": "^9",
     "eslint-config-next": "15.0.3",
