--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "inngest": "^3.24.3",
     "livekit-client": "^2.6.3",
     "livekit-server-sdk": "^2.14.0",
+    "lucide-react": "^0.552.0",
     "next": "15.0.3",
     "postgres": "^3.4.5",
     "react": "^18.2.0",
