Update .env.example with Shared Pooler connection strings
Documentation Updates:
- Added DATABASE_URL example for Shared Pooler (IPv4-compatible)
- Added DIRECT_DATABASE_URL example for direct connection (migrations)
- Added comments explaining when to use each connection type

Connection Strategy:
- DATABASE_URL: Shared Pooler from Supabase Dashboard → Connection Pooling → Shared Pooler
- DIRECT_DATABASE_URL: Direct connection for Drizzle migrations (prepared statements)

All Vercel environments (Production/Preview/Development) have been updated:
✓ DATABASE_URL → aws-1-us-east-1.pooler.supabase.com:5432 (Shared Pooler)
✓ DIRECT_DATABASE_URL → db.udpolhavhefflrawpokb.supabase.co:5432 (Direct)

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,14 @@ NODE_ENV=development
 NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJxxx...
 SUPABASE_SERVICE_ROLE_KEY=eyJxxx...
-DATABASE_URL=postgresql://postgres:xxx@xxx.supabase.co:5432/postgres
+
+# Database - Shared Pooler (IPv4-compatible, use for API routes and serverless)
+# Get this from Supabase Dashboard → Database → Connection Pooling → Shared Pooler
+DATABASE_URL=postgresql://postgres.xxx:PASSWORD@aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require
+
+# Database - Direct Connection (use for migrations, CLI tools, long-running scripts)
+# Drizzle migrations need direct connection because they use prepared statements
+DIRECT_DATABASE_URL=postgresql://postgres:PASSWORD@db.xxx.supabase.co:5432/postgres?sslmode=require
 
 # Stripe
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
