--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
+    "@vercel/analytics": "^1.6.1",
     "ably": "^2.14.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.4",
